<resources>
    <string name="app_name">HackTestApp</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="login_title">Hackaton Test App</string>
    <string name="login_instructions">Please logging with the required IDs</string>
    <string name="login_email_hint">Email ID</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Log In</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>





</resources>
